<resources>
    <string name="app_name">AndroidWidgetDemo</string>
    <string name="action_add">add</string>
    <string name="action_delete">delete</string>
    <string name="action_type_gird_view">GirdView</string>
    <string name="action_type_horizontal_grid_view">HorizontalGridView</string>
    <string name="action_type_staggered_grid_view">StaggeredGridView</string>
    <string name="action_type_list_view">ListView</string>
</resources>
